--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "main": "index.js",
   "dependencies": {
     "@googlemaps/google-maps-services-js": "^3.1.6",
+    "async-csv": "^2.1.3",
     "csv": "^5.3.2",
+    "csvtojson": "^2.0.10",
+    "json2csv": "^5.0.1",
     "yargs": "^15.4.1"
   },
   "devDependencies": {},
