--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 *.csv
 *.xlsx
 *.xls 
+example.txt
 
 # Created by https://www.toptal.com/developers/gitignore/api/node
 # Edit at https://www.toptal.com/developers/gitignore?templates=node
